--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ header{
 .container_cabecalho{
     display: flex;
     justify-content: space-between;
-    width: 1440px;
+    width: 90%;
+    max-width: 1440px;
     background-color: aquamarine;
     margin: 0 auto;
     height: 100%;
@@ -25,6 +26,9 @@ header{
 
 .box_busca{
     position: relative;
+    width: 60%;
+    max-width: 500px;
+    margin: 0 10px;
 }
 
 .icone_lupa{
@@ -40,7 +44,7 @@ header{
 }
 
 .campo_busca{
-    width: 500px;
+    width: 100%;
     height: 42px;
     border-radius: 10px;
     border: solid 1px #cccccc;
