inicio pagina cadastro e listagem

--- a/style.css
+++ b/style.css
@@ -57,6 +57,11 @@ header {
   font-size: 1rem;
 }
 
+
+
+
+
+/* BANNER */
 .banner {
   background-image: url(./assets/imgs/banner.png);
   width: 100%;
@@ -172,4 +177,16 @@ footer{
 
 footer p{
   font-family: "Julius Sans One", sans-serif;
+  text-align: center;
+}
+
+
+
+
+
+/* MEDIA */
+@media screen and (max-width: 600px){
+  .banner{
+    aspect-ratio: 2.0;
+  }
 }
