--- a/cadastro/style.css
+++ b/cadastro/style.css
@@ -5,7 +5,7 @@
   font-family: "Bellota", system-ui;
 }
 
-body{
+body {
   background-color: #FFF6E8;
 }
 
@@ -64,4 +64,50 @@ header {
   overflow: hidden;
   clip-path: inset(50%);
   white-space: nowrap;
+}
+
+.container_cadastro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.container_cadastro h2 {
+  font-size: 48px;
+  margin-top: 100px;
+}
+
+.container_cadastro hr {
+  width: 300px;
+  height: 4px;
+  border: none;
+  border-radius: 2px;
+  background-color: #FFD188;
+  margin-bottom: 100px;
+}
+
+.box_cadastro {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  max-width: 1440px;
+  background-color: aquamarine;
+}
+
+.cadastro_coluna1 {
+  background-color: lightgreen;
+  width: 45%;
+}
+
+.cadastro_coluna2 {
+  background-color: lightskyblue;
+  width: 45%;
+}
+
+.categoria_img{
+  display: flex;
+}
+
+.valor_peso{
+  display: flex;
 }
