--- a/cadastro/style.css
+++ b/cadastro/style.css
@@ -68,17 +68,25 @@ header {
   white-space: nowrap;
 }
 
+
+
+
+
+/* CADASTRO */
+.container_lista,
 .container_cadastro {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+.container_lista h2,
 .container_cadastro h2 {
   font-size: 48px;
   margin-top: 100px;
 }
 
+.container_lista hr,
 .container_cadastro hr {
   width: 300px;
   height: 4px;
@@ -193,6 +201,13 @@ input[type="file"] {
 .peso{
   width: 40%;
 }
+
+
+
+
+
+/* LISTA */
+
 
 
 
