--- a/cadastro/style.css
+++ b/cadastro/style.css
@@ -5,12 +5,18 @@
   font-family: "Bellota", system-ui;
 }
 
+:root {
+  --corPrincipal: #FFD188;
+  --arredondamento: 10px;
+  --sombra: 0 4px 4px 2px #00000025;
+}
+
 body {
   background-color: #FFF6E8;
 }
 
 header {
-  background-color: #FFD188;
+  background-color: var(--corPrincipal);
   height: 100px;
 }
 
@@ -92,7 +98,7 @@ header {
   height: 4px;
   border: none;
   border-radius: 2px;
-  background-color: #FFD188;
+  background-color: var(--corPrincipal);
   margin-bottom: 100px;
 }
 
@@ -151,7 +157,7 @@ header {
   margin-bottom: 20px;
 }
 
-.categoria{
+.categoria {
   width: 70%;
 }
 
@@ -165,13 +171,13 @@ header {
   margin: 50px 0;
   border-radius: 10px;
   border: none;
-  background-color: #FFD188;
+  background-color: var(--corPrincipal);
   padding: 10px 200px;
   box-shadow: 0 4px 4px 2px #00000025;
   cursor: pointer;
 }
 
-.img{
+.img {
   width: 20%;
 }
 
@@ -194,11 +200,11 @@ input[type="file"] {
   cursor: pointer;
 }
 
-.valor{
+.valor {
   width: 50%;
 }
 
-.peso{
+.peso {
   width: 40%;
 }
 
@@ -207,23 +213,105 @@ input[type="file"] {
 
 
 /* LISTA */
+table {
+  /* background-color: aquamarine; */
+  width: 90%;
+  max-width: 1200px;
+  text-align: center;
+  border-collapse: collapse;
+}
+
+th {
+  border-bottom: solid 2px var(--corPrincipal);
+  padding: 0 3px 5px 3px;
+  font-size: 18px;
+}
+
+td {
+  padding: 10px 3px 5px 3px;
+  border-bottom: solid 2px #B3B3B350;
+}
+
+table svg {
+  width: 30px;
+  cursor: pointer;
+}
+
+
+
+
+
+/* RODAPE */
+footer{
+  width: 100%;
+  height: 60px;
+  background-color: #FFD188;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer p{
+  font-family: "Julius Sans One", sans-serif;
+  text-align: center;
+}
 
 
 
 
 
 /* MEDIA */
+@media screen and (max-width: 1000px) {
+  table {
+    width: 98%;
+  }
+}
+
 @media screen and (max-width: 768px) {
-  .box_cadastro{
+  .box_cadastro {
     flex-direction: column;
   }
 
   .cadastro_coluna1,
-  .cadastro_coluna2{
+  .cadastro_coluna2 {
     width: 100%;
   }
 
-  .container_cadastro input[type="button"]{
+  .container_cadastro input[type="button"] {
     padding: 10px 100px;
+  }
+
+  /* LISTA */
+  table {
+    text-align: left;
+    max-width: 460px;
+  }
+
+  thead {
+    display: none;
+  }
+
+  tr {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 30px;
+    background-color: #ffffff;
+    border-radius: var(--arredondamento);
+    border: solid 1px var(--corPrincipal);
+    box-shadow: var(--sombra);
+  }
+
+  td {
+    border-bottom: none;
+  }
+
+  td::before {
+    content: attr(data-cell);
+    font-weight: 600;
+    border-bottom: solid 2px #B3B3B350;
+  }
+
+  td:last-child {
+    align-self: flex-end;
   }
 }
