--- a/home/style.css
+++ b/home/style.css
@@ -14,11 +14,44 @@
     white-space: nowrap;
 }
 
+body{
+    background-color: #FFF6E8;
+}
+
+.main_home{
+    width: 90%;
+    max-width: 1440px;
+    margin: 0 auto;
+    display: flex;
+}
+
+.secao_logo{
+    display: flex;
+    flex-direction: column;
+    width: 360px;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .secao_logo svg {
     width: 240px;
+    margin-top: 50px;
+}
+
+.secao_logo img{
+    width: 300px;
+}
+
+.secao_cards{
+    width: calc(100% - 360px);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10%;
 }
 
 .card {
+    margin: 50px 0;
     width: 260px;
     height: 360px;
     text-decoration: none;
@@ -37,11 +70,102 @@
     background: linear-gradient(180deg, rgba(59, 31, 0, 1) 0%, rgba(107, 57, 0, 1) 100%);
 }
 
+.card_cerimonias{
+    background: linear-gradient(180deg,rgba(6, 0, 96, 1) 0%, rgba(12, 0, 187, 1) 100%);
+}
+
+.card_morango{
+    background: linear-gradient(180deg,rgba(96, 0, 0, 1) 0%, rgba(151, 0, 0, 1) 100%);
+}
+
+.card_natal{
+    background: linear-gradient(180deg,rgba(8, 50, 0, 1) 0%, rgba(15, 92, 0, 1) 100%);
+}
+
+.card_coco{
+    background: linear-gradient(180deg,rgba(104, 66, 50, 1) 0%, rgba(168, 105, 78, 1) 100%);
+}
+
+.card_destaques{
+    background: linear-gradient(180deg,rgba(65, 0, 56, 1) 0%, rgba(117, 0, 102, 1) 100%);
+}
+
 .card svg:first-child {
     width: 26px;
     align-self: flex-end;
 }
 
-.svg_principal {
+.svg_cacau {
     width: 150px;
+}
+
+.svg_principal{
+    width: 170px;
+}
+
+/* RODAPE */
+footer{
+  width: 100%;
+  height: 60px;
+  background-color: #FFD188;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer p{
+  font-family: "Julius Sans One", sans-serif;
+  text-align: center;
+}
+
+.whatsapp{
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  transition: transform 0.5s ease-in-out,
+              filter 0.5s ease-in-out;
+}
+
+.whatsapp img{
+  width: 80px;
+  filter: drop-shadow(0 5px 1px #00000025);
+}
+
+.whatsapp:hover{
+  transform: scale(1.2);
+  filter: drop-shadow(0 10px 2px #00000025);
+}
+
+
+
+
+/* MEDIA */
+@media screen and (max-width: 1050px){
+    .main_home{
+        flex-direction: column;
+        align-items: center;
+        width: 95%;
+    }
+
+    .secao_logo{
+        position: relative;
+        margin-top: 50px;
+    }
+
+    .secao_logo svg{
+        position: absolute;
+        top: 230px;
+        background-color: #FFD188;
+        padding: 10px 40px 5px;
+        border-radius: 20px;
+        box-shadow: 0 4px 4px 2px #00000025;
+    }
+
+    .secao_logo img{
+        width: 150px;
+    }
+
+    .secao_cards{
+        width: 100%;
+    }
 }
